# mcu-firmware

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  integration_test.sh  travis_odroid_rsa.enc
.metadata/: version.ini
.metadata/.cache/: com.silabs.ss.framework.project.toolchain.core-toolchainManager.cache.settings
.metadata/.cache/com.silabs.ss.framework.project.toolchain.core-toolchainManager.cache/: registryCachedDescriptors  registryCachedDescriptorsSettings
.metadata/.plugins/com.silabs.ss.framework.project.ui/: dialog_settings.xml
.metadata/.plugins/com.silabs.ss.platform.content.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
SimplicityStudio/.externalFiles/: .project
SimplicityStudio/.metadata/: version.ini
SimplicityStudio/.metadata/.cache/: com.silabs.ss.framework.project.toolchain.core-toolchainManager.cache.settings
SimplicityStudio/STK3700_blink/: .cproject
SimplicityStudio/STK3700_freertos_blink/: .cproject  .project
SimplicityStudio/motor-controller/: .cproject  .project
efm32gg/: motor-controller.hex  stk-motor-controller.hex
efm32gg/include/: crc.h  pwm.h  rov_utilities.h  uart.h  vortex_msg.h  watchdog.h
efm32gg/src/: crc.c  main.c  pwm.c  rov_utilities.c  uart.c  watchdog.c
include/: uart.h
odriod-xu4/: serial_rw.py
odroid-xu4/: SerialCom.cpp  SerialCom.h  serial_rw.cpp
src/: pwm.c
test/: test_integration.py
(+155 files in other folders)
